crate/sinex-primitives/tests/source_contract_compile_fail/missing_runtime_shape.stderr
error[E0599]: no method named `build` found for struct `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, MissingRuntimeShape, HasBuildImpact>` in the current scope
  --> tests/source_contract_compile_fail/missing_runtime_shape.rs:18:6
   |
 8 |       let _ = SourceRuntimeBinding::builder(
   |  _____________-
 9 | |         subject_ref!("runtime_unit:test.missing_runtime_shape"),
10 | |         "test.missing_runtime_shape",
11 | |         "test",
...  |
17 | |     .build_impact(SourceBuildImpact::ZERO)
18 | |     .build();
   | |     -^^^^^ method not found in `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, MissingRuntimeShape, HasBuildImpact>`
   | |_____|
   |
   |
   = note: the method was found for
           - `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
